# symmetric-key-exercise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  security-audit.yml
src/: lib.rs
