[package]
name = "symmetric-key-exercise"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "encrypt"
path = "bin/encrypt.rs"

[[bin]]
name = "decrypt"
path = "bin/decrypt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
