[package]
name = "symmetric-key-exercise"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "encrypt"
path = "bin/encrypt.rs"

[[bin]]
name = "decrypt"
path = "bin/decrypt.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
thiserror = "1.0.40"
anyhow = "1.0"

# std feature required for thiserror
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand = "0.8.5"
[dev-dependencies]
tempfile = "3"
